--- a/style.css
+++ b/style.css
@@ -1,17 +1,83 @@
 .agregar-op {
   display: none;
+  background-color: rgb(210, 210, 210);
   width: 315px;
   margin: 10px 0;
   padding: 15px;
   padding-top: 0;
   border: 1px solid #000000;
+  margin-left: auto;
+  margin-right: auto;
 }
 .agregar-op.active {
   display: block;
+  position:absolute;
+  top: 0px;
 }
 
 .input-op {
   display: block;
   width: 295px;
   margin-bottom: 0px;
+}
+
+td, th, table {
+  padding: 5px;
+  border:#000000 1px solid;
+  border-collapse: collapse;
+  padding: 8px 15px;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  color: #333;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 24px;
+}
+
+.container {
+  width: 80%;
+  margin: 20px auto;
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+button {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #555;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+
+.th-articulo {
+  width: 300px;
 }
